# Xener

./: .gitignore  LICENSE  README.md  pyproject.toml
skill/: SKILL.md
skill/scripts/: install.py  refine_cluster.py  run_pipeline.py  step1_markers.py  step2_weight.py  step3_mapping.py  step4_topk.py  step5_annotate.py  suggest_refine.py
skill/xener/: SKILL.md
skill/xener/examples/: config.example.yaml  xener-init.example.yaml
skill/xener/references/: autonomous-decision-making.md  config-schema.md  log-interpretation.md  mandatory-rules.md  output-files.md  parameters.md  troubleshooting.md
skill/xener/references/workflows/: config-validation.md  full-pipeline.md  initialization.md  inspection.md  refinement.md  self-tuning-protocol.md  species-selection.md  step-by-step.md
skill/xener/scripts/: _xener_init.py  check_output.py  init_xener.py  inspect_h5ad.py  install.py  list_organs.py  list_species.py  plot_umap.py  refine_cluster.py  run_pipeline.py  step1_markers.py  step2_weight.py  step3_mapping.py  step4_topk.py  step5_annotate.py  suggest_refine.py
xener/: __init__.py  config.py  core.py
xener/utils/: __init__.py  logger.py  seq.py
xener/utils/blast/: __init__.py  blastp.py  get_blastdb.py  makeblastdb.py
xener/utils/h5ad/: __init__.py  preprocess.py
xener/utils/kg/: __init__.py  base.py  bolt_backend.py  client.py  http_backend.py
